--- a/simple.html
+++ b/simple.html
@@ -6,7 +6,7 @@
 
 -->
 <head>
-	<title>Silly Changes on Master</title>
+	<title>Lots of Trouble</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
@@ -18,14 +18,12 @@
 </head>
 <body>
 	<main class="container">
-	<!-- Junk Filler Content -->
 		<p>
 			Just stuff for now,
 			Not sure if we should replace this or not
 		</p>
 	</main>
 	<footer class="container">
-		<p>&copy; Abel Cabrera 2020</p>
 	</footer>
 </body>
 </html>
