--- a/simple.html
+++ b/simple.html
@@ -2,11 +2,11 @@
 <!--
 
 	Copyright 2020 Git.Training
-	Adding changes before rebasing conflicts
+	Some silly changes from master branch
 
 -->
 <head>
-	<title>A Very Respectful Website</title>
+	<title>Silly Changes on Master</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
@@ -18,13 +18,14 @@
 </head>
 <body>
 	<main class="container">
-	<!-- Content Goes Here -->
+	<!-- Junk Filler Content -->
 		<p>
-			Just some content
+			Just stuff for now,
+			Not sure if we should replace this or not
 		</p>
 	</main>
 	<footer class="container">
-		<p>&copy; Git Training 2020</p>
+		<p>&copy; Abel Cabrera 2020</p>
 	</footer>
 </body>
 </html>
